internal/gatewayapi/testdata/clienttrafficpolicy-host-strip-port.in.yaml
clientTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: target-gateway-1
    spec:
      host:
        stripPort: true
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: Same
